<resources>
    <string name="app_name">Pinnacle</string>

    <string name="api_key">pinnacle@1234</string>

    <string name="inventory_management_system">INVENTORY MANAGEMENT SYSTEM</string>
    <string name="entire_inventory_at_your_finger_tips">ENTIRE INVENTORY AT YOUR FINGER TIPS</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dashboard">Dashboard</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="purchase_orders">Purchase Orders</string>
    <string name="customer">Customer</string>
    <string name="shoetage">SHORTAGE</string>
    <string name="bom">BOM</string>
    <string name="delivered">Delivered</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="stock_check">Stock Check</string>
    <string name="stock_alerts">Stock Alerts</string>
    <string name="part_code">Part Code</string>
    <string name="required_qty">Required Qty</string>
    <string name="in_stock_qty">In-stock Qty</string>
    <string name="shortage_qty">Shortage Qty</string>
    <string name="action">Action</string>
    <string name="electricals">Electricals</string>
    <string name="mechanicals">Mechanicals</string>
    <string name="stickers">Stickers</string>
    <string name="fasteners">Fasteners</string>
    <string name="locate">Locate</string>
    <string name="job_works">Job Works</string>
    <string name="logout">Logout</string>
    <string name="pending">Pending</string>
    <string name="pending_job_work">Pending Job Works</string>
    <string name="inprogress_job_work">In Progress Job Works</string>
    <string name="delayed_job_work">Delayed Job Works</string>
    <string name="completed_job_work">Completed Job Works</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="mark_as_assigned">MARK AS ASSIGNED</string>
    <string name="vendor">VENDOR</string>
    <string name="internal_movements">Internal Movements</string>
    <string name="internal_movement">Internal Movement</string>
    <string name="new_movement">NEW MOVEMENT</string>
    <string name="scan_crate">Scan Crate</string>
    <string name="scan_a_crate">SCAN A CRATE</string>
    <string name="process">Process</string>
    <string name="confirm">Confirm</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="open_drawer">OpenDrawer</string>
    <string name="close_drawer">CloseDrawer</string>
    <string name="no_data_found">No records found</string>
    <string name="delayed">Delayed</string>
    <string name="enter_username">Please enter username</string>
    <string name="valide_username">Please enter valid username</string>
    <string name="enter_password">Please enter password</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="enter_pin">Please enter 4 digit pin</string>
    <string name="low_stock">Low Stock</string>
    <string name="max_stock">Max Stock</string>
    <string name="zero_stock">ZERO Stock</string>
    <string name="stickers_fasteners">STICKERS &amp; FASTENERS</string>
    <string name="my_machines">My Machines</string>
    <string name="service_request">Service Request</string>
    <string name="problem_solving">Problem Solving</string>
    <string name="new_products">New Products</string>
    <string name="our_new_products">Our New Products</string>
    <string name="settings">Settings</string>
    <string name="add_new_request">ADD NEW REQUEST</string>
    <string name="request_no">Request No.</string>
    <string name="engineer_assigned">Engineer Assigned</string>
    <string name="manual_book">Manual Book</string>
    <string name="max">max</string>
    <string name="zero">zero</string>
    <string name="min">min</string>
</resources>