<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEFF0">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_20dp">

            <TextView
                android:id="@+id/txtDashboardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/dashboard"
                android:textColor="@color/dark_blue_color"
                android:textSize="@dimen/_30dp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/txtDashboardTitle"
                android:layout_marginTop="@dimen/_20dp"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/lin1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardMyMachines"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="@dimen/_20dp"
                            android:layout_weight="1"
                            android:background="@drawable/light_black_round_corner"
                            android:foreground="?attr/selectableItemBackground"
                            app:cardBackgroundColor="@color/login_bg_color">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:padding="@dimen/_15dp">

                                <ImageView
                                    android:id="@+id/imgMyMachines"
                                    android:layout_width="@dimen/_30dp"
                                    android:layout_height="@dimen/_30dp"
                                    android:layout_centerHorizontal="true"
                                    android:src="@drawable/ic_my_machines"
                                    android:tint="#fbe1ca">

                                </ImageView>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/imgMyMachines"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="@dimen/_5dp"
                                    android:fontFamily="@font/montserrat_bold"
                                    android:gravity="center"
                                    android:text="@string/my_machines"
                                    android:textColor="@color/white">

                                </TextView>

                            </RelativeLayout>


                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardServiceRequest"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_20dp"
                            android:layout_weight="1"
                            android:background="@drawable/light_black_round_corner"
                            android:foreground="?attr/selectableItemBackground"
                            app:cardBackgroundColor="@color/green_box_color">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="@dimen/_15dp">


                                <ImageView
                                    android:id="@+id/imgServiceRequest"
                                    android:layout_width="@dimen/_30dp"
                                    android:layout_height="@dimen/_30dp"
                                    android:layout_centerHorizontal="true"
                                    android:src="@drawable/ic_service_request"
                                    android:tint="#e8eda3">

                                </ImageView>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/imgServiceRequest"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="@dimen/_5dp"
                                    android:fontFamily="@font/montserrat_bold"
                                    android:text="@string/service_request"
                                    android:textColor="@color/white">

                                </TextView>

                            </RelativeLayout>


                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lin2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lin1"
                        android:layout_marginTop="@dimen/_20dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardProblemSolving"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="@dimen/_20dp"
                            android:layout_weight="1"
                            android:background="@drawable/light_black_round_corner"
                            android:foreground="?attr/selectableItemBackground"
                            app:cardBackgroundColor="@color/white">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="@dimen/_15dp">


                                <ImageView
                                    android:id="@+id/imgProblemSolving"
                                    android:layout_width="@dimen/_30dp"
                                    android:layout_height="@dimen/_30dp"
                                    android:layout_centerHorizontal="true"
                                    android:src="@drawable/ic_problem_solving"
                                    android:tint="@color/light_blue_icon_color">

                                </ImageView>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/imgProblemSolving"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="@dimen/_5dp"
                                    android:fontFamily="@font/montserrat_bold"
                                    android:text="@string/problem_solving"
                                    android:textColor="@color/dark_blue_color"
                                    android:textStyle="bold">

                                </TextView>

                            </RelativeLayout>


                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardNewProduct"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_20dp"
                            android:layout_weight="1"
                            android:background="@drawable/light_black_round_corner"
                            android:foreground="?attr/selectableItemBackground"
                            app:cardBackgroundColor="@color/white">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="@dimen/_15dp">


                                <ImageView
                                    android:id="@+id/imgNewProduct"
                                    android:layout_width="@dimen/_30dp"
                                    android:layout_height="@dimen/_30dp"
                                    android:layout_centerHorizontal="true"
                                    android:src="@drawable/ic_new_product"
                                    android:tint="@color/light_blue_icon_color">

                                </ImageView>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/imgNewProduct"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="@dimen/_5dp"
                                    android:fontFamily="@font/montserrat_bold"
                                    android:text="@string/new_products"
                                    android:gravity="center"
                                    android:textColor="@color/dark_blue_color"
                                    android:textStyle="bold">

                                </TextView>

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>